fix table overflow issue
this fixes an issue where on mobile tables were blowing up the page
width. this sets `display: block` and `overflow: auto` on them inside of
our markdown content div so they can't do that anymore.

closes #90
pr #91

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -178,7 +178,9 @@ table {
 
 article.content {
   // sometimes the tables can be wide, and on mobile that can ruin the overall page width
-  // mais, malheureusement, bootstrap n'a pas un class définé pour indiquer qu'il faut avoir
-  // overflow: scroll!
-  overflow: scroll;
+  // this forces the table to scroll if it's too wide
+  table {
+    display: block;
+    overflow: auto;
+  }
 }
